--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-spring.datasource.url = jdbc:h2:file:~/diningreviews
+spring.datasource.url=jdbc:postgresql://localhost:5432/diningreviews
+spring.datasource.username=prusakova
+spring.datasource.password=user1234
 spring.jackson.default-property-inclusion = NON_NULL
 spring.jpa.defer-datasource-initialization = true
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto=create-drop
